# RAG_Chatbot

./: .gitignore  README.md  run_instructions.txt
rag_chatbot/: .env.example  README.md  chat_models.json  config.py  embeddings.py  error.txt  ingest_docs.py  ingestion.py  main.py  memory.py  models.json  pyproject.toml  requirements.txt  start.bat  test_emb.py  vectorstore.py
rag_chatbot/middleware/: auth.py
rag_chatbot/routes/: __init__.py  chat.py  history.py  ingest.py  session.py
rag_frontend/: .env.example  README.md  index.html  package-lock.json  package.json
rag_frontend/src/: App.css  App.jsx  api.js  index.css
rag_frontend/src/components/: ChatWindow.jsx  MessageBubble.jsx  Sidebar.jsx
